[project]
name = "hayo_comfyui_nodes"
description = "Nodes:tensor_trans_pil, Make Transparent mask, MergeImages, words_generatee, load_PIL image"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/1shadow1/hayo_comfyui_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "hayo_comfyui_nodes"
Icon = ""
